# elm

./: Makefile  README.md  kia_pid_support.csv  pid_table.csv  pyproject.toml
.github/workflows/: ci.yml
extract_pid/: pid_extract.ipynb  pid_table.html
notebooks/: pid_extract.ipynb  scan_kia_support.ipynb  support.ipynb
src/: main.py
src/elm/: __init__.py  base_client.py  client.py  pid.py
tests/: test_base_client.py  test_client.py  test_kia.py  test_pid.py  test_real_device.py
