[tool.poetry]
name = "elm"
version = "0.1.0"
description = ""
authors = ["Thomas Harrison <theharrisoncrafter@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyserial = "^3.5"
loguru = "^0.7.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
ruff = "^0.8.4"
ipykernel = "^6.29.5"

[tool.poetry.group.pid_table.dependencies]
beautifulsoup4 = "^4.13.4"
ipykernel = "^6.29.5"
pandas = "^2.2.3"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F401"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=src"

[tool.coverage.run]
branch = false
source = ["src"]
omit = ["main.py"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
